# cmd/api/main.go
@@ -1,18 +1,28 @@
 package main
 
 import (
+	"database/sql"
 	"log"
 	"net/http"
 
+	_ "github.com/lib/pq"
+
 	"github.com/version-1/golang-rest-api/internal/app"
 	"github.com/version-1/golang-rest-api/internal/controller"
+	"github.com/version-1/golang-rest-api/internal/model"
 	"github.com/version-1/golang-rest-api/internal/swagger"
 )
 
 func main() {
 	api := app.New()
 	api.Use(loggingMiddleware)
+	dsn := "psql://gorest:password@127.0.0.1:5432/gorest_development?sslmode=disable"
+	conn, err := sql.Open("postgres", dsn)
+	if err != nil {
+		log.Fatal(err)
+	}
 
+	m := model.New(conn)
 	api.HandleFunc(http.MethodGet, "/spec/swagger.yml", func(w http.ResponseWriter, r *http.Request, _ app.Route) {
 		w.Header().Set("Content-Type", "text/plain")
 		w.Write([]byte(swagger.SwaggerYAML()))
@@ -25,7 +35,7 @@ func main() {
 
 	api.HandleFunc(http.MethodGet, "/posts", func(w http.ResponseWriter, r *http.Request, ro app.Route) {
 		c := controller.Query[map[string]string](w, r)
-		c.Render(map[string]string{"message": "Hello, World!"})
+		c.Render(map[string]string{"message": "ok"})
 	})
 
 	api.HandleFunc(http.MethodPost, "/posts", func(w http.ResponseWriter, r *http.Request, ro app.Route) {
@@ -116,6 +126,7 @@ func main() {
 
 	api.HandleFunc(http.MethodGet, "/users/current", func(w http.ResponseWriter, r *http.Request, _ app.Route) {
 		c := controller.Query[map[string]string](w, r)
+		m.User().Find(r.Context(), 1)
 		c.Render(map[string]string{"message": "ok"})
 	})
 
